[cronet] Call setupNqePersistence directly

This was initially written to allow
ConfigureNetworkQualityEstimatorForTesting to execute before
NQEPersistence is set up.

However, I've been unable to reproduce crbug/758401 in >100runs of
NQETest using this cl which calls setupNQEPersistence directly in the
initializeNQEPersistence method.

Also, looking at the configureNQEForTesting method, it sets up
3 variables which are not used during the construction of
NQE but rather when the estimates are being taken. So, it should
not matter that it is called after setupNQEPersistence. We should
only care that the configuration is done before any request
and estimate is started, this is reflected in the documentation
of configureNetworkQualityEstimator.

Bug: 758401, b/283352630
Change-Id: I54b1ce5809d41ab217f6c7a3c49f99c0d28ca367
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/4571200
Commit-Queue: Chidera Olibie <colibie@google.com>
Reviewed-by: Stefano Duo <stefanoduo@google.com>
Cr-Commit-Position: refs/heads/main@{#1150507}